<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.democracyday.ShareActivity"
    android:background="#d4e6f4"
    android:fillViewport="true"
    android:scrollbars="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/nigeria_flag" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/democracy_day"
            android:textSize="20sp"
            android:id="@+id/text_view"
            android:layout_toRightOf="@+id/myImageView"
            android:layout_toEndOf="@id/myImageView"/>


    </RelativeLayout>



    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/location_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/location"
        android:inputType="textCapWords"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/message_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/message"
        android:inputType="textCapSentences"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />


    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="shareMessage"
        android:text="@string/share"
        android:background="#851036"/>

</LinearLayout>


</ScrollView>


